removed all web interface dependencies

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,5 @@
 {deps, [
-  {webmachine, "1.8.*", {git, "git://github.com/basho/webmachine", "HEAD"}},
-  {ibrowse, ".*", {git, "git://github.com/cmullaparthi/ibrowse.git", "master"}}
+%  {folsom_wm, "v0.0.*", {git, "git://github.com/amtal/folsom_wm", "HEAD"}}
 ]}.
 {erl_opts, [debug_info]}.
 {cover_enabled, true}.
